<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LogInSignup.Login"
    android:background="@color/lightWhite"
    android:padding="30dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:onClick="back_to_onBoard"
            android:src="@drawable/back_icon"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center"
            android:src="@drawable/loginpic"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/robotonedium"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textColor="#268326"
            android:textSize="20sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

<!--username-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/enter_username"
                app:boxStrokeColor="@color/lightblue"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/lightblue"
                app:hintTextColor="@color/lightblue"
                app:startIconDrawable="@drawable/username_icon"
                app:startIconTint="@color/lightblue">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/robotoregular"
                    android:inputType="text"
                    android:textColor="@color/black"

                    />
            </com.google.android.material.textfield.TextInputLayout>
<!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:boxStrokeColor="@color/lightblue"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/lightblue"
                app:hintTextColor="@color/lightblue"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/lightblue">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/robotoregular"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
<!--Remember me and forget Password-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/remeber_me"
                    android:buttonTint="@color/black"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"/>
                <Button
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toForgetPassword"
                    android:text="@string/forget_password"
                    android:background="#00000000"
                    android:layout_alignParentEnd="true"/>


            </RelativeLayout>
<!--Signin Button-->
            <Button
                android:id="@+id/login_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#4DD64D"
                android:onClick="dashboard"
                android:text="@string/sign_in_btn"
                android:textColor="@color/white" />

            <Button
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:onClick="signup"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/googlebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="70dp"
                android:maxHeight="70dp"
                android:scaleType="fitCenter"
                android:src="@drawable/google_icon"
                android:layout_gravity="center"/>
        </LinearLayout>


    </LinearLayout>


</ScrollView>