<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LogInSignup.Signup"
    android:background="@color/lightWhite"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
        android:id="@+id/signup_back_btn"
        android:layout_width="wrap_content"
            android:onClick="back_btns"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/back_icon"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center"
            android:src="@drawable/signupimg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_btn"
            android:textColor="#368CC9"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/robotonedium"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/enterfullname"
                android:textColorHint="@color/lightblue"
                app:boxStrokeColor="@color/lightblue"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/lightblue"
                app:hintTextColor="@color/lightblue"
                app:startIconDrawable="@drawable/fullname_icon"
                app:startIconTint="@color/lightblue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterusername"
                android:textColorHint="@color/lightblue"
                app:boxStrokeColor="@color/lightblue"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/lightblue"
                app:hintTextColor="@color/lightblue"
                app:startIconDrawable="@drawable/username_icon"
                app:startIconTint="@color/lightblue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enternumber"
                android:textColorHint="@color/lightblue"
                app:boxStrokeColor="@color/lightblue"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/lightblue"
                app:hintTextColor="@color/lightblue"
                app:startIconDrawable="@drawable/ic_baseline_settings_phone_24"
                app:startIconTint="@color/lightblue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numberEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterpassword"
                android:textColorHint="@color/lightblue"
                app:boxStrokeColor="@color/lightblue"
                app:boxStrokeWidthFocused="2dp"
                app:endIconTint="@color/lightblue"
                app:hintTextColor="@color/lightblue"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/lightblue"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/lightblue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_repass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reenterpassword"
                android:textColorHint="@color/lightblue"
                app:boxStrokeColor="@color/lightblue"
                app:boxStrokeWidthFocused="2dp"
                app:endIconTint="@color/lightblue"
                app:hintTextColor="@color/lightblue"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/lightblue"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/lightblue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        
        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_acc"
            android:onClick="otp_page"
            android:background="#368CC9"
            android:textColor="@color/lightWhite"
            android:layout_marginTop="20dp"
            android:elevation="5dp"/>
        <Button
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:text="@string/alreadyhaveaccount"
            android:layout_marginTop="20dp"
            android:onClick="SignIn"
            android:background="#00000000"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>