<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.OnBoarding"
    android:padding="20dp">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="362dp"
        android:layout_height="508dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_btn"
        android:paddingLeft="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorSkip"
        android:onClick="skip"
        android:background="#00000000"
      />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="368dp"
        android:layout_height="186dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/get_started_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2AB82A"
            android:onClick="skip"
            android:textColor="#fff"
            android:text="@string/get_started_btn"
            android:visibility="invisible" />

        <Button
            android:id="@+id/signinButton"
            android:layout_marginTop="65dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:textColor="@color/colorAccent"
            android:text="@string/sign_in"
            android:onClick="callLoginScreen"
            android:transitionName="transition_login"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingBottom="20dp" >

        </LinearLayout>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="#00000000"
            android:drawableEnd="@drawable/next_button"
            android:onClick="next"
            android:paddingBottom="30dp" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>