<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMain.Home.descfragment"
    android:background="@drawable/collapsingdesign"
    >
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:id="@+id/back_floating"
        android:src="@drawable/back_icon"
        app:fabSize="normal"
        app:layout_anchorGravity="top"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#FFFFFF"/>
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:background="@color/home_20">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:id="@+id/collapsing_toolbar"
            android:background="@drawable/collapsingdesign">
            <ImageView
                android:id="@+id/image_holder"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:maxWidth="420dp"
                android:maxHeight="420dp"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax"
                android:src="@drawable/profile_icon"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:background="@drawable/layout_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/name"
                    android:text="title"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:fontFamily="@font/poppinsbold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/description"
                    android:text="description"
                    android:textSize="15sp"
                    android:textColor="#8D000000"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/poppinsregular"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Quick Guide"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:fontFamily="@font/poppinsmedium"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <!--                Fertilizer-->
                    <androidx.cardview.widget.CardView
                        android:layout_width="320dp"
                        android:layout_height="60dp"
                        app:cardCornerRadius="5dp"
                        android:layout_margin="10dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:padding="5dp"

                            android:layout_marginLeft="10dp">
                            <ImageView
                                android:id="@+id/fertilizer_img"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:maxWidth="30dp"
                                android:maxHeight="30dp"
                                android:scaleType="fitCenter"
                                android:layout_centerVertical="true"
                                android:src="@drawable/fertilizer"/>
                            <TextView
                                android:id="@+id/fertilizer_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fertilizer_title"
                                android:layout_toRightOf="@id/fertilizer_img"
                                android:layout_marginLeft="15dp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/poppinsmedium"
                                android:textSize="13dp"
                                />
                            <TextView
                                android:id="@+id/fertilizer_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Description of Fertilizer"
                                android:layout_below="@id/fertilizer_title"
                                android:layout_toRightOf="@id/fertilizer_img"
                                android:layout_marginLeft="15dp"
                                android:textSize="13dp"
                                android:fontFamily="@font/poppinsregular"
                                android:padding="3dp"/>


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <!--                Sunlight-->
                    <androidx.cardview.widget.CardView
                        android:layout_width="320dp"
                        android:layout_height="60dp"
                        app:cardCornerRadius="5dp"
                        android:layout_margin="10dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:padding="5dp"
                            android:layout_marginLeft="10dp">
                            <ImageView
                                android:id="@+id/sunlight_img"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:maxWidth="30dp"
                                android:maxHeight="30dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/sunlight"
                                android:layout_centerVertical="true"/>
                            <TextView
                                android:id="@+id/sunlight_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunlight_title"
                                android:layout_toRightOf="@id/sunlight_img"
                                android:layout_marginLeft="15dp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/poppinsmedium"
                                android:textSize="13dp"
                                />
                            <TextView
                                android:id="@+id/sunlight_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Description of Lighting"
                                android:layout_below="@id/sunlight_title"
                                android:layout_toRightOf="@id/sunlight_img"
                                android:layout_marginLeft="15dp"
                                android:fontFamily="@font/poppinsregular"
                                android:textSize="13dp"
                                android:padding="3dp"/>

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <!--                Watering-->
                    <androidx.cardview.widget.CardView
                        android:layout_width="320dp"
                        android:layout_height="60dp"
                        app:cardCornerRadius="5dp"
                        android:layout_margin="10dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:padding="5dp"
                            android:layout_marginLeft="10dp">
                            <ImageView
                                android:id="@+id/watering_img"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:maxWidth="30dp"
                                android:maxHeight="30dp"
                                android:scaleType="fitCenter"
                                android:src="@drawable/watering"
                                android:layout_centerVertical="true"/>
                            <TextView
                                android:id="@+id/watering_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/watering_title"
                                android:layout_toRightOf="@id/watering_img"
                                android:layout_marginLeft="15dp"
                                android:fontFamily="@font/poppinsmedium"
                                android:textSize="13dp"
                                android:textColor="@color/black"
                                />
                            <TextView
                                android:id="@+id/watering_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Description of Lighting"
                                android:layout_below="@id/watering_title"
                                android:layout_toRightOf="@id/watering_img"
                                android:layout_marginLeft="15dp"
                                android:textSize="13dp"
                                android:fontFamily="@font/poppinsregular"
                                android:padding="3dp"/>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:baselineAlignBottom="false"-->
<!--        android:clickable="true"-->
<!--        android:src="@drawable/heart_icon"-->
<!--        app:fabSize="normal"-->
<!--        app:layout_anchor="@id/appbar"-->
<!--        app:layout_anchorGravity="end|bottom"-->
<!--        android:layout_marginRight="30dp"-->
<!--        android:backgroundTint="#FFFFFF"/>-->



</androidx.coordinatorlayout.widget.CoordinatorLayout>